# AiTutor

./: .env  .env.example  README.md  package-lock.json  pyproject.toml  requirements.txt
backend/: main.py
backend/api/: schemas.py
backend/api/routes/: __init__.py  books.py  chapters.py  evaluate.py  examples.py  notes.py  questions.py  subtopics.py  topics.py
backend/config/: settings.py
backend/database/: vector_store.py
backend/evaluation/: answer_validator.py
backend/models/: ollama_client.py
backend/rag/: __init__.py  chunker.py  embedder.py  retriever.py
backend/scraping/: ncert_scraper.py  pdf_processor.py
backend/services/: chapter_extractor.py  notes_generator.py  question_generator.py  solved_examples.py  subtopic_extractor.py  text_fallback.py  topic_extractor.py  tutor_pipeline.py
backend/utils/: security.py
cache/index/: 9_science_exploration_full.faiss  9_science_exploration_full.meta.pkl
database/: ncert_catalog.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  styles.css
frontend/src/components/: ChatPanel.jsx
frontend/src/context/: AppContext.jsx
frontend/src/lib/: api.js
prompts/: chapters_prompt.txt  evaluation_prompt.txt  long_answer_prompt.txt  mcq_prompt.txt  notes_prompt.txt  short_answer_prompt.txt  solved_examples_prompt.txt  subtopics_prompt.txt  topics_prompt.txt
tests/: test_chunker.py  test_retriever.py  test_security.py  test_subtopic_extractor.py  test_vector_store.py
