[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aitutor"
version = "0.1.0"
description = "NCERT grounded tutor API"
requires-python = ">=3.11"
dependencies = [
	"fastapi==0.115.0",
	"uvicorn[standard]==0.30.6",
	"httpx==0.27.2",
	"pydantic==2.9.1",
	"pydantic-settings==2.4.0",
	"python-dotenv==1.0.1",
	"PyMuPDF==1.24.10",
	"pdfplumber==0.11.4",
	"faiss-cpu==1.8.0.post1",
	"numpy==1.26.4",
	"sentence-transformers==3.0.1",
]

[tool.vercel]
entrypoint = "backend.main:app"
